--- a/OpenPantry/Base.lproj/Main.storyboard
+++ b/OpenPantry/Base.lproj/Main.storyboard
@@ -41,7 +41,7 @@
             </objects>
             <point key="canvasLocation" x="2860" y="-286"/>
         </scene>
-        <!--Open Pantry-->
+        <!--View Controller-->
         <scene sceneID="mcD-Uw-P95">
             <objects>
                 <viewController id="JlC-Hm-w8d" sceneMemberID="viewController">
@@ -49,8 +49,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="openPantryBackground" translatesAutoresizingMaskIntoConstraints="NO" id="H0A-Fi-CDf">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="openPantryBackground" translatesAutoresizingMaskIntoConstraints="NO" id="H0A-Fi-CDf">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -62,11 +62,11 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="MLv-7H-4pV"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Open Pantry" image="openPantryIcon" id="qCz-JG-9OE"/>
+                    <navigationItem key="navigationItem" id="sCj-8f-MJr"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dol-yL-pD2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1353" y="445"/>
+            <point key="canvasLocation" x="2292" y="444.82758620689657"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Pl8-dC-GQA">
@@ -81,7 +81,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zyR-5k-656" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2110" y="445"/>
+            <point key="canvasLocation" x="3048.8000000000002" y="444.82758620689657"/>
         </scene>
         <!--Favorites-->
         <scene sceneID="Jxf-Dc-7IN">
@@ -111,7 +111,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="8Qi-i3-VFW" kind="relationship" relationship="viewControllers" id="OKf-a6-XX0"/>
-                        <segue destination="JlC-Hm-w8d" kind="relationship" relationship="viewControllers" id="Y6s-5S-eBd"/>
+                        <segue destination="Zac-vl-1Hg" kind="relationship" relationship="viewControllers" id="Y6s-5S-eBd"/>
                         <segue destination="oax-hP-o29" kind="relationship" relationship="viewControllers" id="wcd-5O-TMQ"/>
                     </connections>
                 </tabBarController>
@@ -137,6 +137,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pbU-1y-uvx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1352.8" y="-283.80809595202402"/>
+        </scene>
+        <!--Open Pantry-->
+        <scene sceneID="hNK-VA-dNx">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Zac-vl-1Hg" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Open Pantry" image="openPantryIcon" id="qCz-JG-9OE"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="QW8-EH-lXR">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="JlC-Hm-w8d" kind="relationship" relationship="rootViewController" id="U3c-Iy-fwT"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="prg-6u-NLV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1352.8" y="444.82758620689657"/>
         </scene>
     </scenes>
     <resources>
