--- a/OpenPantry/Base.lproj/Main.storyboard
+++ b/OpenPantry/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
         <!--Recipe Detail View Controller-->
         <scene sceneID="XGe-zQ-oM8">
             <objects>
-                <viewController id="nxi-XJ-QK6" customClass="RecipeDetailViewController" customModule="OpenPantry" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RecipeDetailViewController" id="nxi-XJ-QK6" customClass="RecipeDetailViewController" customModule="OpenPantry" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="JsA-8k-FcM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -122,6 +122,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
+                                    <action selector="searchButtonPressed:" destination="JlC-Hm-w8d" eventType="touchUpInside" id="iRc-pa-Iux"/>
                                     <segue destination="ZeC-uh-xlU" kind="show" id="icT-Y3-wGC"/>
                                 </connections>
                             </button>
